MY DEV ORG/src/objects/LiveText__SMS_Text__c.object
<CustomObject>
    <description>SMS Text</description>
    <fields>
        <fullName>LiveText__Conversation_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversation Header</label>
        <referenceTo>LiveText__Conversation_Header__c</referenceTo>
        <relationshipLabel>SMS Texts (Conversation Header)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__End_Chat_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Chat_End_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Chat Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__First_Name__c</fullName>
        <description>Stores the first name of the person messaging in.</description>
        <label>First_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Formatted_Originating_Number__c</fullName>
        <formula>IF(OR(NOT(ISNULL(LiveText__First_Name__c)), NOT(ISNULL(LiveText__Last_Name__c))), (LiveText__First_Name__c + &apos; &apos; + LiveText__Last_Name__c), LiveText__Originating_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Originating Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Initial_Message__c</fullName>
        <formula>LiveText__Support_Number__r.LiveText__Initial_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Last_Name__c</fullName>
        <description>Stores the last name of the person messaging in.</description>
        <label>Last_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__OriginTimestamp__c</fullName>
        <description>Time the message was composed by the client.</description>
        <label>OriginTimestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Originating_Number__c</fullName>
        <description>Originating Number</description>
        <label>Originating Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>LiveText</fullName>
                    <default>true</default>
                    <label>LiveText</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiveText__Support_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>SMS Texts (Support Number)</relationshipLabel>
        <relationshipName>SMS_Text</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Thumbnail_Photo_Url__c</fullName>
        <description>Stores the Url of the thumb profile pic of the person messaging in.</description>
        <label>Thumbnail_Photo_Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LiveText__Time_Zone__c</fullName>
        <description>Stores the timezone of the person texting in.</description>
        <label>Time_Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__Unique_SMS__c</fullName>
        <label>Unique SMS</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SMS Text</label>
    <listViews>
        <fullName>LiveText__All</fullName>
        <columns>NAME</columns>
        <columns>LiveText__Conversation_Header__c</columns>
        <columns>LiveText__Originating_Number__c</columns>
        <columns>LiveText__Source__c</columns>
        <columns>LiveText__Support_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>SMS Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>